2008-12-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/Makefile.am:
	* glom/dialog_existing_or_new.[h|cc]: Also check an alternative 
	directory path for the examples because an (unofficial) Ubuntu package 
	installs them in an unexpected location. I would rather find out 
	how/why that is happening though.

2008-12-10  Johannes  <jschmid@openismus.com>

	* configure.in:
	Depend on libgdamm-4.0, libgda-postgres-4.0 and pygda-4.0

	* glom/main.cc: Call Gnome::Gda::Init() without arguments
	
	* glom/base_db.cc:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool_backends/postgres_central.cc:
	* glom/libglom/connectionpool_backends/postgres_central.h:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/connectionpool_backends/postgres_self.h:
	* glom/libglom/connectionpool_backends/sqlite.cc:
	* glom/libglom/connectionpool_backends/sqlite.h:
	* glom/libglom/data_structure/field.cc:
	* glom/libglom/data_structure/fieldtypes.cc:
	* glom/libglom/python_embed/py_glom_relatedrecord.cc:
	* glom/libglom/test_connectionpool.cc:
	* glom/libglom/utils.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/mode_design/fields/dialog_fielddefinition.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	* regression_tests/test_parsing_time.cc:

2008-12-09  Armin Burgmeier  <armin@openismus.com>

	* glom/application.h:
	* glom/application.cc: Set "Users" mene item in "Developer" menu
	insensitive when the database does not support users.

	* glom/frame_glom.cc: Don't ask for user/password for SQLite
	connections.

	* glom/libglom/data_structure/glomconversions.cc
	(get_text_for_gda_value): Really allow TIME values to be strings.

	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool_backends/postgres_central.h:
	* glom/libglom/connectionpool_backends/postgres_self.h:
	* glom/libglom/connectionpool_backends/sqlite.h: Added a