@@ -1,3 +1,12 @@
+2008-12-12  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/libglom/data_structure/fieldtypes.cc: Constructor,
+	* glom/base_db.cc: get_fields_for_table_from_database():
+	Use the new get_meta_store_data() method overload with no filter 
+	parameter to simplify the code slightly.
+	Add debug output to show how often we call update_meta_store() and 
+	how awfully slow it is. 
+
 2008-12-11  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/Makefile.am:
